2009-09-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, psx01/init.c, psx01/psx01.scn: Add new
	test to exercise clock and delay services enabled when POSIX threads
	are disabled. This is split from psx01. POSIX test suite now enabled
	when POSIX threads are disabled so only enable tests which are
	appropriate.
	* psxclock/.cvsignore, psxclock/Makefile.am, psxclock/init.c,
	psxclock/psxclock.doc, psxclock/psxclock.scn: New files.

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psx09/init.c, psx09/psx09.scn: Correct test following decision of
	when not to change ssporadic scheduler so it does not touch a task's
	priority when it is holding a mutex or its priority would be impacted
	adversely.

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxtime/main.c, psxtime/psxtime.scn, psxtime/test.c: Add test case
	for adjusting time (adjtime()) where the time is adjusted by enough
	microseconds that it crosses a second boundary.

2009-08-19	Santosh G Vattam <vattam.santosh@gmail.com>

	* psx07/init.c, psx07/psx07.scn, psx07/system.h, psx07/task.c: Update
	test to catch more sporadic server cases.

2009-08-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psx01/init.c, psx01/psx01.scn: Add test case for nanosleep with NULL
	remaining pointer.

2009-08-17	

	* psx05/init.c, psx05/psx05.scn: Add test case for initializing
	a recursize mutex.

2009-08-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxfile01/test.c, psxstat/test.c, psxtime/test.c: Eliminate test
	routines TICKS_PER_SECOND and get_ticks_per_second() in favor of new
	rtems_clock_get_ticks_per_second().

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxsignal01/init.c: Convert calls to legacy routine rtems_clock_get(
	RTEMS_CLOCK_GET_xxx, ..) to rtems_clock_get_xxx().

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxstat/test.c, psxtime/test.c: Convert calls to legacy routine