@@ -28,4 +28,7 @@ Fri May 24 11:05:06 1996
 Init: sec (0), nsec (0) remaining
 Init: usleep - 1.35 seconds
 Fri May 24 11:05:07 1996
+clock_gettime - CLOCK_THREAD_CPUTIME -- ENOSYS
+clock_settime - CLOCK_PROCESS_CPUTIME -- ENOSYS
+clock_settime - CLOCK_THREAD_CPUTIME -- ENOSYS
 *** END OF POSIX CLOCK TEST ***
