@@ -18,7 +18,7 @@ psxsignal03_LDADD = $(MANAGERS_NOT_WANTED:%=$(PROJECT_LIB)/no-%.rel)
 
 AM_CPPFLAGS += -I$(top_srcdir)/include
 AM_CPPFLAGS += -I$(top_srcdir)/../support/include
-AM_CPPFLAGS += -DUSE_USER_SIGNALS
+AM_CPPFLAGS += -DUSE_USER_SIGNALS_PROCESS
 
 LINK_OBJS = $(psxsignal03_OBJECTS) $(psxsignal03_LDADD)
 LINK_LIBS = $(psxsignal03_LDLIBS)
